--- a/static/style.css
+++ b/static/style.css
@@ -1,4 +1,30 @@
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height:100;
+    margin: 0;
+}
+
+.container{
+    display: flex;
+    align-items: center;
+}
+
 canvas {
     border:1px solid #d3d3d3;
     background-color: #f1f1f1;
+}
+
+.controls{
+    display: flex;
+    flex-direction: column;
+    margin-left: 20px;
+}
+
+button{
+    margin:10px;
+    padding:10px 20px;
+    font-size: 24px;
+    cursor: pointer;
 }
