--- a/static/style.css
+++ b/static/style.css
@@ -2,35 +2,48 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height:100;
+    height: 100;
     margin: 0;
 }
 
-.container{
+.container {
+    padding-top: 50px;
     display: flex;
     align-items: center;
 }
 
 canvas {
-    border:1px solid #d3d3d3;
+    border: 1px solid #d3d3d3;
     background-color: #f1f1f1;
 }
 
-.controls{
+.controls {
     display: flex;
     flex-direction: column;
     margin-left: 20px;
 }
 
-#score{
-    margin:10px;
-    padding:10px 20px;
+#timer {
+    width: 150px;
+    margin: 10px;
+    padding: 10px 20px;
     font-size: 36px;
+    text-align: center;
+    white-space: nowrap;
 }
 
-button{
-    margin:10px;
-    padding:10px 20px;
+#score {
+    width: 150px;
+    margin: 10px;
+    padding: 10px 20px;
+    font-size: 36px;
+    text-align: center;
+    white-space: nowrap;
+}
+
+button {
+    margin: 10px;
+    padding: 10px 20px;
     font-size: 24px;
     cursor: pointer;
 }
